--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@reduxjs/toolkit": "^1.6.2",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
+    "chart.js": "^3.6.0",
     "moment": "^2.29.1",
     "query-string": "^7.0.1",
     "react": "^17.0.0",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
